# Agentic-Communication-R1

./: Notice.txt  pyproject.toml  requirements-npu.txt  requirements.txt  requirements_sglang.txt  setup.py
agent_system/multi_turn_rollout/: models.py  reading_policy.py  rollout_loop.py  utils.py
agent_system/multi_turn_rollout/methods/: latent_mas.py
docs/: requirements-docs.txt
tests/GSM8K/: config_based_multi_agent_test.py  integrated_multi_agent_test.py  run_config_based_test.sh  run_integrated_test.sh  test_data_loading.py
verl/trainer/: main_multi_agent_train.py  main_ppo.py
verl/trainer/config/: ppo_trainer_latent_mas.yaml
verl/trainer/ppo/: core_algos.py  metric_utils.py  ray_trainer.py  train_reading_policy.py
