[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-communication-R1"
version = "0.1.0"
description = "Research code for Agentic Communication R1."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
  {name = "Bo Zheng"}
]

dependencies = []

[project.urls]
Repository = "https://github.com/zb951659860-spec/Agentic-Communication-R1"